force-app/main/default/objects/Product2/fields/Case_Allotment__c.field-meta.xml
<CustomField>
    <fullName>Case_Allotment__c</fullName>
    <description>Case Allotment per Month for Managed Services</description>
    <inlineHelpText>Case Allotment per Month for Managed Services</inlineHelpText>
    <label>Case Allotment</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>