force-app/main/default/objects/Product2/fields/Case_Overage__c.field-meta.xml
<CustomField>
    <fullName>Case_Overage__c</fullName>
    <description>Case Overage value for Managed Services</description>
    <inlineHelpText>Case Overage value for Managed Services</inlineHelpText>
    <label>Case Overage</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>