force-app/main/default/objects/Product2/fields/Tech_Support_Requests_per_Month__c.field-meta.xml
<CustomField>
    <fullName>Tech_Support_Requests_per_Month__c</fullName>
    <label>Tech Support Requests per Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>