force-app/main/default/objects/Product2/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <label>Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Month-to-Month</fullName>
            </value>
            <value>
                <fullName>Monthly with 1-year term</fullName>
            </value>
            <value>
                <fullName>Monthly with 2-year term</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>