force-app/main/default/objects/Product2/fields/Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours__c</fullName>
    <description>Total Hours for QuickStart</description>
    <inlineHelpText>Total Hours for QuickStart</inlineHelpText>
    <label>Total Hours</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>