force-app/main/default/objects/Product2/fields/Total_Reports__c.field-meta.xml
<CustomField>
    <fullName>Total_Reports__c</fullName>
    <description>Total Reports and/or Dashboards for Quickstart</description>
    <inlineHelpText>Total Reports and/or Dashboards for Quickstart</inlineHelpText>
    <label>Total Reports</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>