force-app/main/default/objects/Product2/fields/Total_Web_Meetings__c.field-meta.xml
<CustomField>
    <fullName>Total_Web_Meetings__c</fullName>
    <label>Total Web Meetings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>