force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>notEqual</operation>
        <value>Project</value>
    </filters>
    <label>All Products</label>
</ListView>